kyvernorules/ClusterPolicy/06-k8s-required-labels++.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: required-labels
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-required-labels
    match:
      resources:
        kinds:
        - apps/v1/Deployment
        - apps/v1/StatefulSet
        - apps/v1/DaemonSet
    validate:
      message: "The label `team` is required."
      pattern:
        spec:
          template:
            metadata:
              labels:
                team: "?*"
